read-srite composed store.